--- a/views/driverDashboard.ejs
+++ b/views/driverDashboard.ejs
@@ -436,7 +436,7 @@
                     <% bookingList.forEach(booking => { %>
                         <li class="booking-item">
                             <div class="booking-header">
-                                <strong>Date: <%= booking.passengerName %></strong> <%= booking.date.toLocaleDateString() %>
+                                <strong>Passenger: <%= booking.passengerName %></strong> <%= booking.date.toLocaleDateString() %>
                             </div>
                             <div class="booking-details">
                                 <div><strong>Driver ID:</strong> <%= booking.driverId %></div>
